--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "oucc-react",
-  "version": "1.0.3",
-  "private": true,
+  "version": "1.0.4",
+  "private": false,
+  "homepage": "https://oxfordunichess.github.io/oucc-frontend",
+  "source": "https://github.com/oxfordunichess/oucc-frontend",
   "dependencies": {
     "axios": "^0.19.0",
     "create-react-app": "^3.2.0",
@@ -13,11 +15,14 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0"
   },
+  "license": "MIT",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+	"eject": "react-scripts eject",
+	"predeploy": "yarn build",
+	"deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
