--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "oucc-react",
   "version": "1.0.5",
   "private": false,
-  "homepage": "http://users.ox.ac.uk/~chess/",
+  "homepage": ".",
   "source": "https://github.com/oxfordunichess/oucc-frontend",
   "dependencies": {
     "axios": "^0.19.0",
