--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "oucc-react",
   "version": "1.0.10",
   "private": false,
-  "homepage2": "https://oxfordunichess.github.io/oucc-frontend/",
-  "homepage": "http://users.ox.ac.uk/~chess/",
+  "homepage": "./",
+  "homepage3": "https://oxfordunichess.github.io/oucc-frontend/",
+  "homepage2": "http://users.ox.ac.uk/~chess/",
   "source": "https://github.com/oxfordunichess/oucc-frontend",
   "dependencies": {
     "axios": "^0.19.0",
