--- a/package.json
+++ b/package.json
@@ -6,16 +6,21 @@
   "homepage": "http://users.ox.ac.uk/~chess/",
   "source": "https://github.com/oxfordunichess/oucc-frontend",
   "dependencies": {
+    "array.prototype.flat": "^1.2.2",
     "axios": "^0.19.0",
     "create-react-app": "^3.2.0",
     "html-to-react": "^1.4.2",
+    "moment": "^2.24.0",
     "node-sass": "^4.12.0",
-    "react": "^16.10.2",
-    "react-dom": "^16.10.2",
+    "react": "^16.11.0",
+    "react-big-calendar": "^0.20.4",
+    "react-dom": "^16.11.0",
     "react-helmet": "^5.2.1",
     "react-markdown": "^4.2.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "react_google_calendar": "^2.2.4444",
+    "webpack": "^4.41.2"
   },
   "license": "MIT",
   "scripts": {
@@ -24,7 +29,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "yarn build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "deploy-sso": "gh-pages -d build -b sso"
   },
   "eslintConfig": {
     "extends": "react-app"
