--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "html-to-react": "^1.4.2",
     "moment": "^2.24.0",
     "node-sass": "^4.12.0",
+    "papaparse": "^5.1.0",
     "react": "^16.11.0",
     "react-big-calendar": "^0.20.4",
     "react-dom": "^16.11.0",
