--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "oucc-react",
   "version": "1.0.12",
   "private": false,
-  "homepage": "https://oxfordunichess.github.io/oucc-frontend/",
-  "homepage2": "http://users.ox.ac.uk/~chess/",
+  "homepage2": "https://oxfordunichess.github.io/oucc-frontend/",
+  "homepage": "http://users.ox.ac.uk/~chess/",
   "source": "https://github.com/oxfordunichess/oucc-frontend",
   "dependencies": {
     "array.prototype.flat": "^1.2.2",
