--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "oucc-react",
-  "version": "1.0.12",
+  "version": "1.0.13",
   "private": false,
   "homepage": "https://oxfordunichess.github.io/oucc-frontend/",
   "homepage2": "http://users.ox.ac.uk/~chess/",
@@ -9,6 +9,8 @@
     "array.prototype.flat": "^1.2.2",
     "axios": "^0.19.0",
     "create-react-app": "^3.2.0",
+    "he": "^1.2.0",
+    "html-react-parser": "^0.10.0",
     "html-to-react": "^1.4.2",
     "moment": "^2.24.0",
     "node-sass": "^4.12.0",
