--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "oucc-react",
-  "version": "1.0.15",
+  "version": "1.1.0",
   "private": false,
   "homepage": "https://oxfordunichess.github.io/oucc-frontend/",
   "homepage2": "http://users.ox.ac.uk/~chess/",
   "source": "https://github.com/oxfordunichess/oucc-frontend",
   "dependencies": {
+    "@types/babel__core": "^7.1.3",
     "array.prototype.flat": "^1.2.2",
     "axios": "^0.19.0",
     "create-react-app": "^3.2.0",
@@ -23,6 +24,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "react_google_calendar": "^2.2.4444",
+    "typescript": "^3.7.2",
     "webpack": "^4.41.2"
   },
   "license": "MIT",
