--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
   "source": "https://github.com/oxfordunichess/oucc-frontend",
   "dependencies": {
     "@types/babel__core": "^7.1.3",
+    "@types/he": "^1.1.0",
+    "@types/react": "^16.9.11",
+    "@types/react-router-dom": "^5.1.2",
     "array.prototype.flat": "^1.2.2",
     "axios": "^0.19.0",
     "create-react-app": "^3.2.0",
+    "eslint-plugin-react": "^7.16.0",
     "he": "^1.2.0",
     "html-react-parser": "^0.10.0",
     "html-to-react": "^1.4.2",
@@ -23,6 +27,7 @@
     "react-markdown": "^4.2.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "react-transition-group": "^4.3.0",
     "react_google_calendar": "^2.2.4444",
     "typescript": "^3.7.2",
     "webpack": "^4.41.2"
@@ -51,5 +56,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "typescript-plugin-css-modules": "^2.1.0"
   }
 }
