--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "oucc-react",
-  "version": "1.1.4",
+  "version": "1.1.5",
   "private": false,
   "homepage2": "https://oxfordunichess.github.io/oucc-frontend/",
   "homepage": "http://users.ox.ac.uk/~chess/",
@@ -8,7 +8,9 @@
   "dependencies": {
     "@types/babel__core": "^7.1.3",
     "@types/he": "^1.1.0",
+    "@types/papaparse": "^5.0.1",
     "@types/react": "^16.9.11",
+    "@types/react-helmet": "^5.0.14",
     "@types/react-router-dom": "^5.1.2",
     "array.prototype.flat": "^1.2.2",
     "axios": "^0.19.0",
@@ -21,14 +23,11 @@
     "node-sass": "^4.12.0",
     "papaparse": "^5.1.0",
     "react": "^16.11.0",
-    "react-big-calendar": "^0.20.4",
     "react-dom": "^16.11.0",
     "react-helmet": "^5.2.1",
     "react-markdown": "^4.2.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
-    "react-transition-group": "^4.3.0",
-    "react_google_calendar": "^2.2.4444",
     "typescript": "^3.7.2",
     "webpack": "^4.41.2"
   },
