--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "oucc-react",
   "version": "1.1.5",
   "private": false,
-  "homepage2": "https://oxfordunichess.github.io/oucc-frontend/",
-  "homepage": "http://users.ox.ac.uk/~chess/",
+  "homepage": "https://oxfordunichess.github.io/oucc-frontend/",
+  "homepage2": "http://users.ox.ac.uk/~chess/",
   "source": "https://github.com/oxfordunichess/oucc-frontend",
   "dependencies": {
     "@types/babel__core": "^7.1.3",
@@ -29,7 +29,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "typescript": "^3.7.2",
-    "webpack": "^4.41.2"
+    "webpack": "^4.41.0"
   },
   "license": "MIT",
   "scripts": {
