--- a/package.json
+++ b/package.json
@@ -22,19 +22,21 @@
     "moment": "^2.24.0",
     "node-sass": "^4.12.0",
     "papaparse": "^5.1.0",
-    "path": "^0.12.7",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-helmet": "^5.2.1",
     "react-markdown": "^4.2.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "react-snapshot": "^1.3.0",
     "typescript": "^3.7.2",
+    "url": "^0.11.0",
     "webpack": "^4.41.0"
   },
   "license": "MIT",
   "scripts": {
     "start": "react-scripts start",
+    "seo": "react-snapshot",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
