--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "oucc-react",
   "version": "1.1.9",
   "private": false,
-  "homepage2": "https://oxfordunichess.github.io/oucc-frontend/",
+  "homepage_gh": "https://oxfordunichess.github.io/oucc-frontend/",
   "homepage": "http://users.ox.ac.uk/~chess/",
   "source": "https://github.com/oxfordunichess/oucc-frontend",
   "dependencies": {
@@ -27,7 +27,7 @@
     "react-helmet": "^5.2.1",
     "react-markdown": "^4.2.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0",
+    "react-scripts": "git+ssh://git@github.com/theLAZYmd/react-scripts.git",
     "react-snapshot": "^1.3.0",
     "typescript": "^3.7.2",
     "url": "^0.11.0",
@@ -40,7 +40,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "yarn build",
+    "predeploy": "yarn build --homepage gh",
     "deploy": "gh-pages -d build",
     "deploy-sso": "gh-pages -d build -b sso"
   },
