--- a/package.json
+++ b/package.json
@@ -1,64 +1,65 @@
 {
-  "name": "oucc-react",
-  "version": "1.1.12",
-  "private": false,
-  "homepage_gh": "https://oxfordunichess.github.io/oucc-frontend/",
-  "homepage": "http://users.ox.ac.uk/~chess/",
-  "source": "https://github.com/oxfordunichess/oucc-frontend",
-  "dependencies": {
-    "@types/babel__core": "^7.1.3",
-    "@types/he": "^1.1.0",
-    "@types/papaparse": "^5.0.1",
-    "@types/react": "^16.9.11",
-    "@types/react-helmet": "^5.0.14",
-    "@types/react-router-dom": "^5.1.2",
-    "array.prototype.flat": "^1.2.2",
-    "axios": "^0.19.0",
-    "create-react-app": "^3.2.0",
-    "eslint-plugin-react": "^7.16.0",
-    "he": "^1.2.0",
-    "html-react-parser": "^0.10.0",
-    "html-to-react": "^1.4.2",
-    "moment": "^2.24.0",
-    "node-sass": "^4.12.0",
-    "papaparse": "^5.1.0",
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0",
-    "react-helmet": "^5.2.1",
-    "react-markdown": "^4.2.2",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "git+ssh://git@github.com/theLAZYmd/react-scripts.git",
-    "react-snapshot": "^1.3.0",
-    "typescript": "^3.7.2",
-    "url": "^0.11.0",
-    "webpack": "^4.41.2"
-  },
-  "license": "MIT",
-  "scripts": {
-    "start": "react-scripts start",
-    "seo": "react-snapshot",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "yarn build --homepage gh",
-    "deploy": "gh-pages -d build"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "typescript-plugin-css-modules": "^2.1.0"
-  }
+	"name": "oucc-react",
+	"version": "1.1.13",
+	"private": false,
+	"homepage_gh": "https://oxfordunichess.github.io/oucc-frontend/",
+	"homepage": "http://users.ox.ac.uk/~chess/",
+	"source": "https://github.com/oxfordunichess/oucc-frontend",
+	"scripts": {
+		"start": "react-scripts start",
+		"seo": "react-snapshot",
+		"build": "react-scripts build",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject",
+		"predeploy": "yarn build --homepage gh",
+		"deploy": "gh-pages -d build",
+		"sync-build": "tsc scripts/*.ts --jsx react",
+		"sync": "node scripts/cacheIndex"
+	},
+	"dependencies": {
+		"axios": "^0.19.0",
+		"he": "^1.2.0",
+		"html-react-parser": "^0.10.0",
+		"html-to-react": "^1.4.2",
+		"node-sass": "^4.12.0",
+		"papaparse": "^5.1.0",
+		"react": "^16.11.0",
+		"react-dom": "^16.11.0",
+		"react-helmet": "^5.2.1",
+		"react-markdown": "^4.2.2",
+		"react-router-dom": "^5.1.2",
+		"react-scripts": "git+ssh://git@github.com/theLAZYmd/react-scripts.git",
+		"react-snapshot": "^1.3.0",
+		"url": "^0.11.0",
+		"webpack": "^4.41.2"
+	},
+	"license": "MIT",
+	"eslintConfig": {
+		"extends": "react-app"
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	},
+	"devDependencies": {
+		"@types/babel__core": "^7.1.3",
+		"@types/he": "^1.1.0",
+		"@types/papaparse": "^5.0.1",
+		"@types/react": "^16.9.11",
+		"@types/react-helmet": "^5.0.14",
+		"@types/react-router-dom": "^5.1.2",
+		"array.prototype.flat": "^1.2.2",
+		"create-react-app": "^3.2.0",
+		"eslint-plugin-react": "^7.16.0",
+		"typescript": "^3.7.2",
+		"typescript-plugin-css-modules": "^2.1.0"
+	}
 }
