Moved session ID to a context

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,6 +32,7 @@
             "error",
             "windows"
 		],
+		"no-console": "warn",
 		"no-unused-vars": "off",
         "quotes": [
             "error",
