--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "oucc-react",
-	"version": "1.1.18",
+	"version": "1.1.19",
 	"private": false,
 	"homepage_gh": "https://oxfordunichess.github.io/oucc-frontend/",
 	"homepage": "http://users.ox.ac.uk/~chess/",
@@ -17,6 +17,7 @@
 		"sync": "node scripts/cacheIndex"
 	},
 	"dependencies": {
+		"@types/react-images": "^0.5.1",
 		"axios": "^0.19.0",
 		"he": "^1.2.0",
 		"html-react-parser": "^0.10.0",
@@ -26,7 +27,10 @@
 		"react": "^16.11.0",
 		"react-dom": "^16.11.0",
 		"react-helmet": "^5.2.1",
+		"react-images": "^1.1.0-beta.3",
 		"react-markdown": "^4.2.2",
+		"react-photo-gallery": "^8.0.0",
+		"react-responsive-carousel": "^3.1.51",
 		"react-router-dom": "^5.1.2",
 		"react-scripts": "git+ssh://git@github.com/theLAZYmd/react-scripts.git",
 		"react-snapshot": "^1.3.0",
