--- a/package.json
+++ b/package.json
@@ -17,12 +17,18 @@
 		"sync": "node scripts/cacheIndex"
 	},
 	"dependencies": {
+		"@hapi/wreck": "^17.0.0",
+		"@types/nodemailer": "^6.4.0",
 		"@types/react-images": "^0.5.1",
+		"@types/simple-oauth2": "^2.5.2",
 		"axios": "^0.19.0",
+		"dotenv": "^8.2.0",
 		"he": "^1.2.0",
 		"html-react-parser": "^0.10.0",
 		"html-to-react": "^1.4.2",
+		"lichess": "^1.1.5",
 		"node-sass": "^4.12.0",
+		"nodemailer": "^6.4.5",
 		"papaparse": "^5.1.0",
 		"react": "^16.11.0",
 		"react-dom": "^16.11.0",
@@ -34,6 +40,8 @@
 		"react-router-dom": "^5.1.2",
 		"react-scripts": "git+ssh://git@github.com/theLAZYmd/react-scripts.git",
 		"react-snapshot": "^1.3.0",
+		"react-static": "^7.2.3",
+		"simple-oauth2": "^2.5.2",
 		"url": "^0.11.0",
 		"webpack": "^4.41.2"
 	},
@@ -63,6 +71,7 @@
 		"array.prototype.flat": "^1.2.2",
 		"create-react-app": "^3.2.0",
 		"eslint-plugin-react": "^7.16.0",
+		"kind-of": "^6.0.3",
 		"typescript": "^3.7.2",
 		"typescript-plugin-css-modules": "^2.1.0"
 	}
