--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "oucc-react",
-	"version": "1.1.19",
+	"version": "1.2.0",
 	"private": false,
 	"homepage_gh": "https://oxfordunichess.github.io/oucc-frontend/",
 	"homepage": "http://users.ox.ac.uk/~chess/",
@@ -17,18 +17,16 @@
 		"sync": "node scripts/cacheIndex"
 	},
 	"dependencies": {
-		"@hapi/wreck": "^17.0.0",
-		"@types/nodemailer": "^6.4.0",
-		"@types/react-images": "^0.5.1",
-		"@types/simple-oauth2": "^2.5.2",
 		"axios": "^0.19.0",
 		"dotenv": "^8.2.0",
 		"he": "^1.2.0",
 		"html-react-parser": "^0.10.0",
 		"html-to-react": "^1.4.2",
 		"lichess": "^1.1.5",
+		"md5": "^2.2.1",
+		"net": "^1.0.2",
 		"node-sass": "^4.12.0",
-		"nodemailer": "^6.4.5",
+		"nodemailer": "^6.3.0",
 		"papaparse": "^5.1.0",
 		"react": "^16.11.0",
 		"react-dom": "^16.11.0",
@@ -41,6 +39,7 @@
 		"react-scripts": "git+ssh://git@github.com/theLAZYmd/react-scripts.git",
 		"react-snapshot": "^1.3.0",
 		"react-static": "^7.2.3",
+		"sha256": "^0.2.0",
 		"simple-oauth2": "^2.5.2",
 		"url": "^0.11.0",
 		"webpack": "^4.41.2"
@@ -62,12 +61,18 @@
 		]
 	},
 	"devDependencies": {
+		"@hapi/wreck": "^17.0.0",
 		"@types/babel__core": "^7.1.3",
 		"@types/he": "^1.1.0",
+		"@types/md5": "^2.1.33",
+		"@types/nodemailer": "^6.4.0",
 		"@types/papaparse": "^5.0.1",
 		"@types/react": "^16.9.11",
 		"@types/react-helmet": "^5.0.14",
+		"@types/react-images": "^0.5.1",
 		"@types/react-router-dom": "^5.1.2",
+		"@types/sha256": "^0.2.0",
+		"@types/simple-oauth2": "^2.5.2",
 		"array.prototype.flat": "^1.2.2",
 		"create-react-app": "^3.2.0",
 		"eslint-plugin-react": "^7.16.0",
