Stable build in latest node version

--- a/package.json
+++ b/package.json
@@ -22,13 +22,9 @@
 		"he": "^1.2.0",
 		"html-react-parser": "^0.10.0",
 		"html-to-react": "^1.4.2",
-		"lichess": "^1.1.5",
-		"md5": "^2.2.1",
-		"net": "^1.0.2",
 		"node-sass": "^4.12.0",
-		"nodemailer": "^6.3.0",
 		"papaparse": "^5.1.0",
-		"react": "^16.11.0",
+		"react": "^16.13.1",
 		"react-dom": "^16.11.0",
 		"react-helmet": "^5.2.1",
 		"react-images": "^1.1.0-beta.3",
@@ -36,11 +32,7 @@
 		"react-photo-gallery": "^8.0.0",
 		"react-responsive-carousel": "^3.1.51",
 		"react-router-dom": "^5.1.2",
-		"react-scripts": "git+ssh://git@github.com/theLAZYmd/react-scripts.git",
-		"react-snapshot": "^1.3.0",
-		"react-static": "^7.2.3",
-		"sha256": "^0.2.0",
-		"simple-oauth2": "^2.5.2",
+		"react-scripts": "^3.4.1",
 		"url": "^0.11.0",
 		"webpack": "^4.41.2"
 	},
