--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
 		"html-react-parser": "^0.10.0",
 		"html-to-react": "^1.4.2",
 		"papaparse": "^5.1.0",
-		"react": "^16.13.1",
-		"react-dom": "^16.11.0",
+		"react": "^17.0.2",
+		"react-dom": "^17.0.2",
 		"react-helmet": "^5.2.1",
 		"react-images": "^1.1.0-beta.3",
 		"react-markdown": "^4.2.2",
@@ -32,6 +32,7 @@
 		"react-responsive-carousel": "^3.1.51",
 		"react-router-dom": "^5.1.2",
 		"react-scripts": "^3.4.1",
+		"reactjs-google-calendar": "^2.1.2",
 		"url": "^0.11.0",
 		"webpack": "^4.41.2"
 	},
