--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "1.2.0",
 	"private": false,
 	"homepage_gh": "https://oxfordunichess.github.io/oucc-frontend/",
-	"homepage": "http://users.ox.ac.uk/~chess/",
+	"homepage": "http://users.ox.ac.uk/oucc-frontend/",
 	"source": "https://github.com/oxfordunichess/oucc-frontend",
 	"scripts": {
 		"start": "react-scripts start",
@@ -14,7 +14,10 @@
 		"predeploy": "yarn build --homepage gh",
 		"deploy": "gh-pages -d build",
 		"sync-build": "tsc scripts/*.ts --jsx react",
-		"sync": "node scripts/cacheIndex"
+		"sync": "node scripts/cacheIndex",
+		"ssh": "ssh chess@linux.ox.ac.uk",
+		"mount": "sshfs chess@linux.ox.ac.uk:~/ mount",
+		"unmount": "umount mount"
 	},
 	"dependencies": {
 		"axios": "^0.19.0",
