--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
 		"he": "^1.2.0",
 		"html-react-parser": "^0.10.0",
 		"html-to-react": "^1.4.2",
+		"lichess": "^2.0.14",
+		"md5": "^2.3.0",
 		"next": "^10.1.3",
 		"papaparse": "^5.1.0",
 		"react": "^17.0.2",
@@ -34,7 +36,8 @@
 		"react-photo-gallery": "^8.0.0",
 		"react-responsive-carousel": "^3.1.51",
 		"react-router-dom": "^5.1.2",
-		"reactjs-google-calendar": "^2.1.3"
+		"reactjs-google-calendar": "^2.1.3",
+		"simple-oauth2": "^4.2.0"
 	},
 	"license": "MIT",
 	"eslintConfig": {
@@ -65,7 +68,7 @@
 		"@types/react-images": "^0.5.3",
 		"@types/react-router-dom": "^5.1.7",
 		"@types/sha256": "^0.2.0",
-		"@types/simple-oauth2": "^2.5.2",
+		"@types/simple-oauth2": "^4.1.0",
 		"babel-loader": "^8.2.2",
 		"create-react-app": "^3.2.0",
 		"eslint-plugin-react": "^7.16.0",
